Stop Pathway from inserting markup where we don't want it update labels for many models move to sass

--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -5,7 +5,7 @@
   <p class="lead text-center">
     This treatment course has not yet started.
     <br />
-    {% link_to "Open an FP17 now" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" %}
+    {% link_to "Open an FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" %}
   <p>
 </div>
 <!-- mid Treatment View -->
