--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -28,10 +28,10 @@
 
         <!-- Key Action buttons : We can probably only have one of these at a time. -->
         <span ng-show="episode.fp17_incomplete_treatment[0].date_of_acceptance">
-          {% button_to "Complete FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" icon="fa-money" %}
+          {% button_to "Complete FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
         </span>
         <span ng-hide="episode.fp17_incomplete_treatment[0].date_of_acceptance">
-          {% button_to "Start new treatment course" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" icon="fa-money" %}
+          {% button_to "Open an FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
         </span>
         <!-- End Key Action Buttons -->
 
