Load in all users, performer numbers Set performer as a string representing the person, set the correct address for the contract Set provider location from a choices field

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -5,7 +5,10 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-md-1">
+    {% input field="Demographics.title" style="vertical" %}
+  </div>
+  <div class="col-md-3 col-md-offset-1">
     {% input field="Demographics.first_name" label="First forename" style="vertical" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
