--- a/odonto/templates/records/fp17_dental_care_provider.html
+++ b/odonto/templates/records/fp17_dental_care_provider.html
@@ -6,7 +6,7 @@
   Provider number: [[ item.provider_location_number ]]
    <br />
 </span>
-<span ng-show="item.performer_number">
-  Performer number: [[ item.performer_number ]]
+<span ng-show="item.performer">
+  Performer: [[ item.performer ]]
    <br />
 </span>
