--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -9,7 +9,7 @@
       <ul class="app-info">
         <li>
           <i class="fa fa-user green"></i>&nbsp;
-          {{ user.username }}
+          {{ user.first_name }} {{ user.last_name }}
         </li>
       </ul>
 
