Add btn_radio templatetag, set treatmant band for actual treatment to be a choices field with a radio choice. reset button styles remove bootstrap border radiuses FP17 form step 3.

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -1,3 +1,6 @@
+.cambridge_blue {
+  color: #A3C9A8; }
+
 body {
   background-color: white;
   font-size: 16px;
@@ -16,7 +19,8 @@ a:hover {
   color: #474c5b; }
 
 .form-control {
-  color: #595F72; }
+  color: #595F72;
+  border-radius: 0px; }
 
 .form-horizontal .control-label,
 label {
@@ -24,6 +28,29 @@ label {
   font-size: 18px;
   color: #595F72;
   font-weight: normal; }
+
+.btn {
+  border-radius: 0px; }
+
+.btn.btn-radio-group {
+  font-size: 18px;
+  line-height: 24px;
+  padding: 18px; }
+
+.btn-default {
+  color: #595F72; }
+
+.btn-default.active {
+  background-color: #A3C9A8;
+  border-color: #89ba90;
+  color: #595F72; }
+
+.btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
+  background-color: #A3C9A8;
+  border-color: #89ba90;
+  color: #595F72;
+  font-size: 18px;
+  line-height: 24px; }
 
 h1 {
   margin-bottom: 36px; }
@@ -34,6 +61,10 @@ h2 {
 .form-horizontal .control-label,
 label {
   padding-bottom: 8px; }
+
+#logout {
+  position: fixed;
+  bottom: 0px; }
 
 .form-control {
   font-size: 18px;
@@ -63,19 +94,8 @@ label {
 #side-nav {
   background-color: #487CBC; }
 
-#logout {
-  position: fixed;
-  bottom: 0px; }
-
-.grey {
-  color: #999; }
-
 .btn-primary {
   background-color: #66ae28; }
-
-.btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
-  background-color: #d88f21;
-  color: white; }
 
 .navbar-default, .top-navbar {
   border-bottom: none; }
@@ -206,14 +226,6 @@ label {
   background-color: transparent;
   border-bottom: 3px solid #487cbc; }
 
-tr.urgent {
-  color: firebrick;
-  font-weight: bold; }
-
-.bg-urgent {
-  color: white;
-  background-color: firebrick; }
-
 .navbar-brand {
   padding-left: 50px; }
 
@@ -254,11 +266,6 @@ tr.urgent {
 #side-nav hr {
   margin-left: 5%; }
 
-#side-nav.can-assign ul li.active,
-#side-nav.can-assign ul li.active a {
-  background-color: #124c91;
-  background-color: #06916B; }
-
 .outer-container {
   overflow-y: scroll;
   height: 100vh; }
@@ -275,32 +282,6 @@ tr.urgent {
   color: black;
   cursor: pointer; }
 
-.odonto-referral-detail {
-  overflow-y: scroll;
-  height: 80vh; }
-
-.green {
-  color: #9cc96b; }
-
-.c3-xgrid-focus line {
-  display: none; }
-
-.supernumber {
-  font-size: 98px;
-  text-align: center;
-  padding: 12px; }
-
-.superlabel {
-  text-align: center;
-  padding-bottom: 12px; }
-
-.superstat {
-  background-color: #3ebc99; }
-
-.superstat.failing {
-  background-color: red;
-  color: white; }
-
 .btn.btn-default small {
   color: #CCC; }
 
@@ -309,56 +290,6 @@ tr.urgent {
 
 .panel-margin {
   padding-left: 15px; }
-
-/*
-* switch user css
-*/
-.switch-user-bar {
-  position: fixed;
-  height: 60px;
-  width: 30%;
-  bottom: 0;
-  right: 0; }
-
-.switch-user-bg {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-color: #9CBEE6;
-  opacity: 0.4; }
-
-.switch-user-container {
-  padding-top: 10px; }
-
-.btn.can-refer {
-  background-color: #5E52C4;
-  background-color: #487DBC;
-  color: white; }
-
-.btn.can-refer.btn-active {
-  background-color: white;
-  color: #5E52C4;
-  color: #487DBC; }
-
-.btn.can-assign {
-  background-color: #281A9A;
-  background-color: #3EBC99;
-  color: white; }
-
-.btn.can-assign.btn-active {
-  background-color: white;
-  color: #281A9A;
-  color: #3EBC99; }
-
-.btn.can-confirm {
-  background-color: #124c91;
-  background-color: #5E52C4;
-  color: white; }
-
-.btn.can-confirm.btn-active {
-  background-color: white;
-  color: #124c91;
-  color: #5E52C4; }
 
 table.patient-list {
   font-size: 16px; }
