--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -8,7 +8,7 @@
     <div class="col-md-2" id="side-nav">
       <ul class="app-info">
         <li>
-          <i class="fa fa-user green"></i>&nbsp;
+          <i class="fa fa-user cambridge_blue"></i>&nbsp;
           {{ user.first_name }} {{ user.last_name }}
         </li>
       </ul>
