--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -1,6 +1,9 @@
 .cambridge_blue {
   color: #A3C9A8; }
 
+.bg-bone {
+  background-color: #DDD8C4; }
+
 body {
   background-color: white;
   font-size: 16px;
@@ -37,6 +40,14 @@ label {
   line-height: 24px;
   padding: 18px; }
 
+.btn.btn-checkbox {
+  min-width: 40px;
+  min-height: 40px;
+  max-width: 40px;
+  max-height: 40px;
+  text-align: center;
+  padding: 8px 0px 0px 0px; }
+
 .btn-default {
   color: #595F72; }
 
@@ -53,14 +64,19 @@ label {
   line-height: 24px; }
 
 h1 {
+  margin-top: 24px;
   margin-bottom: 36px; }
 
 h2 {
+  margin-top: 24px;
   margin-bottom: 24px; }
 
 .form-horizontal .control-label,
 label {
   padding-bottom: 8px; }
+
+.odonto-checkbox label.col-md-9 {
+  padding-left: 0px; }
 
 #logout {
   position: fixed;
